--- a/AnagaramJS/index.html
+++ b/AnagaramJS/index.html
@@ -42,14 +42,13 @@
           <!-- <input type="submit" value="Submit">
         --></form>
         <div class="prikazi">
-          <p id="prikaziPrvuRec"></p>
-          <p id="prikaziDruguRec"></p>
           <h3 id="daLiJeAnagaram"></h3>
         </div>
       </div>
-      <footer><h2>Created by Marko</h2></footer>
+      <footer>
+        <h2>Created by Marko</h2>
+      </footer>
     </div>
     <script src="js.js"></script>
-    <script src="library.js"></script>
   </body>
 </html>
