Fixed some stuff

--- a/AnagaramJS/index.html
+++ b/AnagaramJS/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header><h1>Anagram</h1></header>
       <div class="anagram">
-        <form id="foruum" onsubmit="myFunction()">
+        <form id="foruum">
           <label>Prva Rec</label>
           <input
             type="text"
@@ -42,7 +42,7 @@
           <!-- <input type="submit" value="Submit">
         --></form>
         <div class="prikazi">
-          <h3 id="daLiJeAnagaram"></h3>
+          <p id="daLiJeAnagaram"></p>
         </div>
       </div>
       <footer>
